# not-on-pypi

./: .gitignore  DEVELOPER.md  README.md  pyproject.toml  setup.py
not_on_pypi/: __init__.py
tests/: test_not_on_pypi.py
