[tool.poetry]
name = "common_app"
# name = "not-on-pypi"

version = "0.0.0a1"
description = "Reserved package name"
authors = [ "Kyle King <dev.act.kyle@gmail.com>",]
maintainers = []
repository = "https://github.com/KyleKing/not-on-pypi"
documentation = "https://github.com/KyleKing/not-on-pypi"
readme = "README.md"
include = [ "LICENSE.md",]
keywords = []
classifiers = []
packages = [{include = "./not_on_pypi"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KyleKing/not-on-pypi/issues"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
